--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-bars"></i>
             </label>
             <div class="title">
-                <img class="head-logo" src="https://slava.erebs.in/assets/images/ere_black_logo.png" alt="">
+                <img class="head-logo" src="images/nav.png" alt="">
             </div>
             <nav>
                 <ul>
@@ -41,6 +41,12 @@
                 <i class="fa-regular fa-user"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
+        </div>
+        <div class="container form">
+            <form class="form-search">
+                <i class="form-icon fas fa-magnifying-glass"></i>
+                <input type="text" placeholder="What are you looking for?"></input>
+            </form>
         </div>
 
     </header>
